--- a/Выпускная работа/css/style.css
+++ b/Выпускная работа/css/style.css
@@ -18,24 +18,34 @@ body {
   font-size: 17px;
 }
 /* line 25, style.less */
+.header-ssilka {
+  text-decoration: none;
+  color: grey;
+}
+/* line 28, style.less */
+.header-ssilka:hover {
+  color: grey;
+  text-decoration: none;
+}
+/* line 33, style.less */
 .header-spisok {
   padding-top: 4px;
 }
-/* line 28, style.less */
+/* line 36, style.less */
 .header-soc {
   text-align: right;
 }
-/* line 31, style.less */
+/* line 39, style.less */
 .header-top {
   margin-top: 30px;
   margin-bottom: 30px;
 }
-/* line 35, style.less */
+/* line 43, style.less */
 .header-fon {
   background: url(../img/fon2.png) no-repeat center center;
   background-size: cover;
 }
-/* line 39, style.less */
+/* line 47, style.less */
 .header-spisok1 {
   display: inline-block;
   text-decoration: none;
@@ -44,49 +54,49 @@ body {
   color: grey;
   padding-top: 45px;
 }
-/* line 46, style.less */
+/* line 54, style.less */
 .header-spisok1:hover {
   color: black;
   border-bottom: 2px solid #fe5c2e;
   padding-bottom: 10px;
 }
-/* line 52, style.less */
+/* line 60, style.less */
 .header-p {
   font-weight: 100;
   font-size: 17px;
 }
-/* line 56, style.less */
+/* line 64, style.less */
 .header-otstup {
   margin-top: 95px;
 }
-/* line 59, style.less */
+/* line 67, style.less */
 .header-span-bold {
   font-weight: 700;
 }
-/* line 62, style.less */
+/* line 70, style.less */
 .header-span-otstup {
   margin-top: 30px;
 }
-/* line 65, style.less */
+/* line 73, style.less */
 .header-opit {
   padding-top: 30px;
 }
-/* line 67, style.less */
+/* line 75, style.less */
 .header-opit:hover {
   background-image: url(../img/header-icon/hover.png);
   background-size: cover;
 }
-/* line 73, style.less */
+/* line 81, style.less */
 .fa-search {
   padding-left: 180px;
 }
-/* line 76, style.less */
+/* line 84, style.less */
 h1 {
   margin-top: 55px;
   font-weight: 700;
   margin-bottom: 20px;
 }
-/* line 81, style.less */
+/* line 89, style.less */
 .zakazat {
   background-color: #fe5c2e;
   border-radius: 10px;
@@ -98,33 +108,33 @@ h1 {
   cursor: pointer;
   border: none;
 }
-/* line 91, style.less */
+/* line 99, style.less */
 .zakazat-span {
   color: #fe5c2e;
   padding-left: 5%;
 }
-/* line 96, style.less */
+/* line 104, style.less */
 .icon {
   height: 30px;
   width: 35px;
 }
-/* line 99, style.less */
+/* line 107, style.less */
 .icon-span-otstup {
   padding: 25px 25px;
 }
-/* line 103, style.less */
+/* line 111, style.less */
 .besplatno {
   color: #fe5c2e;
   text-decoration: underline;
   font-size: 22px;
 }
-/* line 109, style.less */
+/* line 117, style.less */
 .resheniya-p {
   font-weight: 100;
   margin-bottom: 40px;
   font-size: 18px;
 }
-/* line 117, style.less */
+/* line 125, style.less */
 .prodagi > span {
   display: inline-block;
   padding: 10px 0px;
@@ -132,12 +142,12 @@ h1 {
   margin-bottom: 20px;
   line-height: 14pt;
 }
-/* line 125, style.less */
+/* line 133, style.less */
 .prodagi > img {
   padding-top: 20px;
   padding-right: 30px;
 }
-/* line 129, style.less */
+/* line 137, style.less */
 .prodagi {
   width: 370px;
   margin-right: 20px;
@@ -145,178 +155,178 @@ h1 {
   background-color: #fff;
   background-size: auto;
 }
-/* line 135, style.less */
+/* line 143, style.less */
 .prodagi-span {
   font-weight: 700;
   font-size: 18pt;
   margin-top: 20px;
 }
-/* line 143, style.less */
+/* line 151, style.less */
 .prodagi-razvernut {
   color: #fe5c2e;
   font-weight: 100;
 }
-/* line 148, style.less */
+/* line 156, style.less */
 .btn {
   padding: 16px;
   margin-right: 14px;
   text-decoration: none;
 }
-/* line 152, style.less */
+/* line 160, style.less */
 .btn:hover {
   color: white;
   background-color: #fe5c2e;
   cursor: pointer;
 }
-/* line 157, style.less */
+/* line 165, style.less */
 .btn.active {
   background-color: black;
   color: white;
   cursor: pointer;
 }
-/* line 163, style.less */
+/* line 171, style.less */
 .hidden {
   display: none;
 }
-/* line 166, style.less */
+/* line 174, style.less */
 .erp-p {
   font-size: 18px;
   font-weight: 700;
   padding: 30px;
 }
-/* line 170, style.less */
+/* line 178, style.less */
 .erp-p1 {
   font-size: 16px;
   font-weight: 700;
 }
-/* line 175, style.less */
+/* line 183, style.less */
 .sistemi {
   margin: 5px;
 }
-/* line 178, style.less */
+/* line 186, style.less */
 .vigodi > h4 {
   font-weight: 700;
   margin: 25px 0;
 }
-/* line 183, style.less */
+/* line 191, style.less */
 .vigodi-span {
   font-weight: 400;
 }
-/* line 187, style.less */
+/* line 195, style.less */
 .vigodi-img {
   display: block;
   float: left;
   padding: 24px;
 }
-/* line 191, style.less */
+/* line 199, style.less */
 .vigodi-img-2 {
   margin: 25px 0;
   text-align: left;
 }
-/* line 196, style.less */
+/* line 204, style.less */
 .vigodi-block {
   margin-top: 30px;
 }
-/* line 200, style.less */
+/* line 208, style.less */
 .feedback > p {
   font-size: 18px;
   font-weight: 100;
 }
-/* line 205, style.less */
+/* line 213, style.less */
 .feedback-img {
   height: 60px;
   padding: 15px 0;
   margin: 15px 10px;
 }
-/* line 210, style.less */
+/* line 218, style.less */
 .feedback-block {
   height: 200px;
   margin-top: 25px;
 }
-/* line 213, style.less */
+/* line 221, style.less */
 .feedback-block:hover {
   background-color: #fff;
 }
-/* line 218, style.less */
+/* line 226, style.less */
 .feedback > h4 {
   text-decoration: underline;
   color: #fe5c2e;
   margin: 55px 0px;
   margin-bottom: 75px;
 }
-/* line 225, style.less */
+/* line 233, style.less */
 .etapi-h4 {
   font-weight: 700;
 }
-/* line 228, style.less */
+/* line 236, style.less */
 .etapi-4etap {
   background-color: #fff;
   height: 300px;
 }
-/* line 232, style.less */
+/* line 240, style.less */
 .etapi-step {
   margin: 0;
   padding: 15px;
   background-color: #fff;
   height: 150px;
 }
-/* line 239, style.less */
+/* line 247, style.less */
 .etapi-step > h4 {
   font-size: 18px;
   color: grey;
   font-weight: 700;
 }
-/* line 244, style.less */
+/* line 252, style.less */
 .etapi-step > span {
   color: grey;
 }
-/* line 248, style.less */
+/* line 256, style.less */
 .predlogenie-p {
   font-size: 12px;
   font-weight: 100;
   text-decoration: underline;
   color: grey;
 }
-/* line 254, style.less */
+/* line 262, style.less */
 .predlogenie-fon {
   background: url(../img/predlogenie/fon.png) no-repeat center center;
   background-size: cover;
   background-color: #fff;
   height: 286px;
 }
-/* line 260, style.less */
+/* line 268, style.less */
 .predlogenie-img {
   position: absolute;
   top: 0;
   right: 0;
 }
-/* line 265, style.less */
+/* line 273, style.less */
 .predlogenie-button {
   position: relative;
   top: 120px;
   left: -52%;
 }
-/* line 270, style.less */
+/* line 278, style.less */
 .predlogenie-span {
   left: -55%;
 }
-/* line 274, style.less */
+/* line 282, style.less */
 .footer {
   padding: 50px 0px;
 }
-/* line 276, style.less */
+/* line 284, style.less */
 .footer-span {
   font-size: 14px;
   font-weight: 100;
   color: grey;
 }
-/* line 281, style.less */
+/* line 289, style.less */
 .footer-p {
   font-size: 16px;
   font-weight: 100;
   color: grey;
 }
-/* line 286, style.less */
+/* line 294, style.less */
 .footer-phone {
   text-decoration: underline;
   color: black;
