--- a/Выпускная работа/css/style.css
+++ b/Выпускная работа/css/style.css
@@ -17,35 +17,44 @@ body {
   font-weight: 900;
   font-size: 17px;
 }
-/* line 25, style.less */
+/* line 24, style.less */
+i {
+  padding-right: 5px;
+}
+/* line 26, style.less */
+i:hover {
+  color: red;
+}
+/* line 31, style.less */
 .header-ssilka {
   text-decoration: none;
   color: grey;
 }
-/* line 28, style.less */
+/* line 34, style.less */
 .header-ssilka:hover {
   color: grey;
   text-decoration: none;
 }
-/* line 33, style.less */
+/* line 39, style.less */
 .header-spisok {
-  padding-top: 4px;
+  padding-top: 15px;
 }
-/* line 36, style.less */
+/* line 42, style.less */
 .header-soc {
   text-align: right;
+  padding-right: 5px;
 }
-/* line 39, style.less */
+/* line 46, style.less */
 .header-top {
   margin-top: 30px;
   margin-bottom: 30px;
 }
-/* line 43, style.less */
+/* line 50, style.less */
 .header-fon {
   background: url(../img/fon2.png) no-repeat center center;
   background-size: cover;
 }
-/* line 47, style.less */
+/* line 54, style.less */
 .header-spisok1 {
   display: inline-block;
   text-decoration: none;
@@ -54,49 +63,49 @@ body {
   color: grey;
   padding-top: 45px;
 }
-/* line 54, style.less */
+/* line 61, style.less */
 .header-spisok1:hover {
   color: black;
   border-bottom: 2px solid #fe5c2e;
   padding-bottom: 10px;
 }
-/* line 60, style.less */
+/* line 67, style.less */
 .header-p {
   font-weight: 100;
   font-size: 17px;
 }
-/* line 64, style.less */
+/* line 71, style.less */
 .header-otstup {
   margin-top: 95px;
 }
-/* line 67, style.less */
+/* line 74, style.less */
 .header-span-bold {
   font-weight: 700;
 }
-/* line 70, style.less */
+/* line 77, style.less */
 .header-span-otstup {
   margin-top: 30px;
 }
-/* line 73, style.less */
+/* line 80, style.less */
 .header-opit {
   padding-top: 30px;
 }
-/* line 75, style.less */
+/* line 82, style.less */
 .header-opit:hover {
   background-image: url(../img/header-icon/hover.png);
   background-size: cover;
 }
-/* line 81, style.less */
+/* line 88, style.less */
 .fa-search {
   padding-left: 180px;
 }
-/* line 84, style.less */
+/* line 91, style.less */
 h1 {
   margin-top: 55px;
   font-weight: 700;
   margin-bottom: 20px;
 }
-/* line 89, style.less */
+/* line 96, style.less */
 .zakazat {
   background-color: #fe5c2e;
   border-radius: 10px;
@@ -108,33 +117,33 @@ h1 {
   cursor: pointer;
   border: none;
 }
-/* line 99, style.less */
+/* line 106, style.less */
 .zakazat-span {
   color: #fe5c2e;
   padding-left: 5%;
 }
-/* line 104, style.less */
+/* line 111, style.less */
 .icon {
   height: 30px;
   width: 35px;
 }
-/* line 107, style.less */
+/* line 114, style.less */
 .icon-span-otstup {
   padding: 25px 25px;
 }
-/* line 111, style.less */
+/* line 118, style.less */
 .besplatno {
   color: #fe5c2e;
   text-decoration: underline;
   font-size: 22px;
 }
-/* line 117, style.less */
+/* line 124, style.less */
 .resheniya-p {
   font-weight: 100;
   margin-bottom: 40px;
   font-size: 18px;
 }
-/* line 125, style.less */
+/* line 132, style.less */
 .prodagi > span {
   display: inline-block;
   padding: 10px 0px;
@@ -142,12 +151,12 @@ h1 {
   margin-bottom: 20px;
   line-height: 14pt;
 }
-/* line 133, style.less */
+/* line 140, style.less */
 .prodagi > img {
   padding-top: 20px;
   padding-right: 30px;
 }
-/* line 137, style.less */
+/* line 144, style.less */
 .prodagi {
   width: 370px;
   margin-right: 20px;
@@ -155,178 +164,178 @@ h1 {
   background-color: #fff;
   background-size: auto;
 }
-/* line 143, style.less */
+/* line 150, style.less */
 .prodagi-span {
   font-weight: 700;
   font-size: 18pt;
   margin-top: 20px;
 }
-/* line 151, style.less */
+/* line 158, style.less */
 .prodagi-razvernut {
   color: #fe5c2e;
   font-weight: 100;
 }
-/* line 156, style.less */
+/* line 163, style.less */
 .btn {
   padding: 16px;
   margin-right: 14px;
   text-decoration: none;
 }
-/* line 160, style.less */
+/* line 167, style.less */
 .btn:hover {
   color: white;
   background-color: #fe5c2e;
   cursor: pointer;
 }
-/* line 165, style.less */
+/* line 172, style.less */
 .btn.active {
   background-color: black;
   color: white;
   cursor: pointer;
 }
-/* line 171, style.less */
+/* line 178, style.less */
 .hidden {
   display: none;
 }
-/* line 174, style.less */
+/* line 181, style.less */
 .erp-p {
   font-size: 18px;
   font-weight: 700;
   padding: 30px;
 }
-/* line 178, style.less */
+/* line 185, style.less */
 .erp-p1 {
   font-size: 16px;
   font-weight: 700;
 }
-/* line 183, style.less */
+/* line 190, style.less */
 .sistemi {
   margin: 5px;
 }
-/* line 186, style.less */
+/* line 193, style.less */
 .vigodi > h4 {
   font-weight: 700;
   margin: 25px 0;
 }
-/* line 191, style.less */
+/* line 198, style.less */
 .vigodi-span {
   font-weight: 400;
 }
-/* line 195, style.less */
+/* line 202, style.less */
 .vigodi-img {
   display: block;
   float: left;
   padding: 24px;
 }
-/* line 199, style.less */
+/* line 206, style.less */
 .vigodi-img-2 {
   margin: 25px 0;
   text-align: left;
 }
-/* line 204, style.less */
+/* line 211, style.less */
 .vigodi-block {
   margin-top: 30px;
 }
-/* line 208, style.less */
+/* line 215, style.less */
 .feedback > p {
   font-size: 18px;
   font-weight: 100;
 }
-/* line 213, style.less */
+/* line 220, style.less */
 .feedback-img {
   height: 60px;
   padding: 15px 0;
   margin: 15px 10px;
 }
-/* line 218, style.less */
+/* line 225, style.less */
 .feedback-block {
   height: 200px;
   margin-top: 25px;
 }
-/* line 221, style.less */
+/* line 228, style.less */
 .feedback-block:hover {
   background-color: #fff;
 }
-/* line 226, style.less */
+/* line 233, style.less */
 .feedback > h4 {
   text-decoration: underline;
   color: #fe5c2e;
   margin: 55px 0px;
   margin-bottom: 75px;
 }
-/* line 233, style.less */
+/* line 240, style.less */
 .etapi-h4 {
   font-weight: 700;
 }
-/* line 236, style.less */
+/* line 243, style.less */
 .etapi-4etap {
   background-color: #fff;
   height: 300px;
 }
-/* line 240, style.less */
+/* line 247, style.less */
 .etapi-step {
   margin: 0;
   padding: 15px;
   background-color: #fff;
   height: 150px;
 }
-/* line 247, style.less */
+/* line 254, style.less */
 .etapi-step > h4 {
   font-size: 18px;
   color: grey;
   font-weight: 700;
 }
-/* line 252, style.less */
+/* line 259, style.less */
 .etapi-step > span {
   color: grey;
 }
-/* line 256, style.less */
+/* line 263, style.less */
 .predlogenie-p {
   font-size: 12px;
   font-weight: 100;
   text-decoration: underline;
   color: grey;
 }
-/* line 262, style.less */
+/* line 269, style.less */
 .predlogenie-fon {
   background: url(../img/predlogenie/fon.png) no-repeat center center;
   background-size: cover;
   background-color: #fff;
   height: 286px;
 }
-/* line 268, style.less */
+/* line 275, style.less */
 .predlogenie-img {
   position: absolute;
   top: 0;
   right: 0;
 }
-/* line 273, style.less */
+/* line 280, style.less */
 .predlogenie-button {
   position: relative;
   top: 120px;
   left: -52%;
 }
-/* line 278, style.less */
+/* line 285, style.less */
 .predlogenie-span {
   left: -55%;
 }
-/* line 282, style.less */
+/* line 289, style.less */
 .footer {
   padding: 50px 0px;
 }
-/* line 284, style.less */
+/* line 291, style.less */
 .footer-span {
   font-size: 14px;
   font-weight: 100;
   color: grey;
 }
-/* line 289, style.less */
+/* line 296, style.less */
 .footer-p {
   font-size: 16px;
   font-weight: 100;
   color: grey;
 }
-/* line 294, style.less */
+/* line 301, style.less */
 .footer-phone {
   text-decoration: underline;
   color: black;
