--- a/Выпускная работа/less/style.less
+++ b/Выпускная работа/less/style.less
@@ -21,6 +21,12 @@ body {
 	font-weight: 900;
 	font-size: 17px;
 }
+i{
+	padding-right: 5px;
+	&:hover{
+		color: red;
+	}
+}
 .header{
 	&-ssilka{
 		text-decoration: none;
@@ -31,10 +37,11 @@ body {
 		}
 	}
 	&-spisok{
-		padding-top: 4px;
+		padding-top: 15px;
 	}
 	&-soc {
 		text-align: right;
+		padding-right: 5px;
 	}
 	&-top {
 		margin-top: 30px;
