--- a/Выпускная работа/less/style.less
+++ b/Выпускная работа/less/style.less
@@ -8,7 +8,9 @@
 	font-style: normal;
 
 }
-
+* {
+	transition: all 0.2s;
+}
 
 body {
 	background-image: url(../img/fon1.png);
@@ -26,6 +28,9 @@ i{
 	&:hover{
 		color: red;
 	}
+}
+.header-soc>a{
+	color: grey;
 }
 .header{
 	&-ssilka{
