--- a/less/style.less
+++ b/less/style.less
@@ -6,6 +6,14 @@ header{
 	background-image: url(../img/header/1.png);
 }
 .header{
+	&-a{
+		text-decoration: none;
+		color: white;
+		&:hover{
+			text-decoration: none;
+			color: white;
+		}
+	}
 	&-ul{
 	background-color: #313030;
 	width: 100%;
@@ -43,7 +51,7 @@ h1 {
 	letter-spacing: 1.5px;
 }
 
-ul>li{
+.header-li{
 	display: inline-block;
 	text-decoration: none;
 	width: 90px;
@@ -101,7 +109,96 @@ ul>li{
 	&-p{
 		font-size: 16px;
 		padding-bottom: 20px;
-		border-bottom: 2px solid @red;
-	
 	}
+	&-border{
+		border-bottom: 2px solid @red;
+	display: block;
+	margin: auto;
+	width: 300px;
+	}
+	&-ul{
+		margin: 30px auto;
+	}
+	&-li{
+		display: inline-block;
+		font-size: 22px;
+		padding: 0 10px;
+	}
+	&-a{
+		text-decoration: none;
+		color: #797979;
+		&:hover{
+			color:@red;
+			text-decoration: none;
+		}
+	}
+	&-img{
+		display: inline-block;
+		height: 290px;
+		width: 290px;
+		padding-right: 7px;
+		padding-top: 15px;
+
+	}
+}
+.meet{
+	&-h1{
+		font-size: 42px;
+		margin-bottom: 20px;
+		font-weight: 900;
+	}
+	&-p1{
+		font-weight: 500;
+		font-size: 16px;
+		border-bottom: 2px solid @red;
+		width: 350px;
+		padding-bottom: 25px;
+	}
+}
+.mark{
+	&-main{
+		height: 460px;
+		width: 320px;	
+		margin-top: 25px;	
+	}
+	&-h4{
+		font-weight: 700;
+		margin-top: 20px;
+		font-size: 30px;	
+	}
+	&-p{
+		font-weight: 500;
+	}
+	&-li{
+		display: inline-block;
+		text-decoration: none;
+		padding-right: 25px;
+		padding-top: 40px;
+		padding-left: 0;
+		margin: 0;
+		font-style: italic;
+		font-size: 16px;
+	}
+	&-img{
+		width: 160px;
+		padding-top: 30px;
+		margin-top: 50px;
+		height: 200px;
+	}
+	&-a{
+		text-decoration: none;
+		color: #696969;
+		&:hover{
+			color: #696969;
+			text-decoration: none;
+		}
+	}
+	&-ul{
+		margin: 0;
+		padding: 0;
+	}
+}
+.img-responsive{
+	height: 400px;
+	margin-top: 25px;
 }
