--- a/less/style.less
+++ b/less/style.less
@@ -37,6 +37,7 @@ header{
 		height: 50px;
 		border-radius: 10px;
 		margin-top: 35px;
+		border: none;
 	}
 	&-video{
 		background-image: url(../img/header/video.png);
@@ -201,4 +202,47 @@ h1 {
 .img-responsive{
 	height: 400px;
 	margin-top: 25px;
+}
+#design_tips{
+	background-color: #2c2c2c;
+}
+.design {
+	&-h1{
+		padding: 25px 0;
+		font-size: 42px;
+		color: white;
+	}
+	&-p{
+		color: white;
+		text-align: center;	
+	}
+	&-input{
+		margin-top: 30px;
+		width: 520px;
+		height: 55px;
+		line-height: 55px;
+		border-radius: 5px;
+		margin-left: 30%;
+		padding: 10px;
+	}
+	&-button{
+		width: 210px;
+		height: 55px;
+		margin-left: 20px;
+		border-radius: 5px;
+		color: white;
+		border: none;
+		background-color: @red;
+		margin-bottom: 50px;
+	}
+	&-a{
+		text-decoration: none;
+		&:hover{
+			text-decoration: none;
+		}
+		&:active{
+			text-decoration: none;
+			
+		}
+	}
 }
