--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,22 @@
+/* line 2, style.less */
 body {
   font-family: 'Open Sans', sans-serif;
 }
+/* line 5, style.less */
 header {
   background-image: url(../img/header/1.png);
 }
+/* line 9, style.less */
 .header-a {
   text-decoration: none;
   color: white;
 }
+/* line 12, style.less */
 .header-a:hover {
   text-decoration: none;
   color: white;
 }
+/* line 17, style.less */
 .header-ul {
   background-color: #313030;
   width: 100%;
@@ -19,6 +24,7 @@ header {
   color: white;
   margin: 30px 0px;
 }
+/* line 24, style.less */
 .header-li {
   text-transform: uppercase;
   letter-spacing: 1.5px;
@@ -26,6 +32,7 @@ header {
   margin-top: 0px;
   margin-bottom: 0px;
 }
+/* line 31, style.less */
 .header-button {
   color: white;
   background-color: #ff2d2d;
@@ -37,17 +44,19 @@ header {
   margin-top: 35px;
   border: none;
 }
+/* line 42, style.less */
 .header-video {
   background-image: url(../img/header/video.png);
-  -webkit-background-size: cover;
   background-size: cover;
   margin-bottom: 50px;
 }
+/* line 49, style.less */
 h1 {
   font-weight: 900;
   font-size: 55px;
   letter-spacing: 1.5px;
 }
+/* line 55, style.less */
 .header-li {
   display: inline-block;
   text-decoration: none;
@@ -56,25 +65,31 @@ h1 {
   line-height: 90px;
   font-weight: 700;
 }
+/* line 62, style.less */
 .header-li:hover {
   background-color: #ff2d2d;
 }
+/* line 66, style.less */
 .our-p {
   padding: 15px 0;
 }
+/* line 69, style.less */
 .DYK {
   padding-top: 50px;
 }
+/* line 71, style.less */
 .DYK-h1 {
   font-size: 40px;
   text-transform: uppercase;
   letter-spacing: 1.5px;
 }
+/* line 76, style.less */
 .DYK-p {
   font-size: 16px;
   margin-top: 35px;
   margin-bottom: 35px;
 }
+/* line 81, style.less */
 .DYK-button {
   width: 200px;
   height: 45px;
@@ -84,50 +99,62 @@ h1 {
   padding: 12px 10px;
   border-radius: 10px;
 }
+/* line 90, style.less */
 .DYK-img {
   padding-top: 20px;
   padding-bottom: 20px;
 }
+/* line 94, style.less */
 .DYK-block {
   height: 270px;
 }
+/* line 97, style.less */
 .DYK-h4 {
   font-weight: 900;
   padding-bottom: 20px;
 }
+/* line 101, style.less */
 .DYK-animation {
   margin-bottom: 170px;
 }
+/* line 106, style.less */
 .feature-h1 {
   font-size: 42px;
   margin: 25px auto;
 }
+/* line 110, style.less */
 .feature-p {
   font-size: 16px;
   padding-bottom: 20px;
 }
+/* line 114, style.less */
 .feature-border {
   border-bottom: 2px solid #ff2d2d;
   display: block;
   margin: auto;
   width: 300px;
 }
+/* line 120, style.less */
 .feature-ul {
   margin: 30px auto;
 }
+/* line 123, style.less */
 .feature-li {
   display: inline-block;
   font-size: 22px;
   padding: 0 10px;
 }
+/* line 128, style.less */
 .feature-a {
   text-decoration: none;
   color: #797979;
 }
+/* line 131, style.less */
 .feature-a:hover {
   color: #ff2d2d;
   text-decoration: none;
 }
+/* line 136, style.less */
 .feature-img {
   display: inline-block;
   height: 290px;
@@ -135,11 +162,13 @@ h1 {
   padding-right: 7px;
   padding-top: 15px;
 }
+/* line 146, style.less */
 .meet-h1 {
   font-size: 42px;
   margin-bottom: 20px;
   font-weight: 900;
 }
+/* line 151, style.less */
 .meet-p1 {
   font-weight: 500;
   font-size: 16px;
@@ -147,19 +176,23 @@ h1 {
   width: 350px;
   padding-bottom: 25px;
 }
+/* line 160, style.less */
 .mark-main {
   height: 460px;
   width: 320px;
   margin-top: 25px;
 }
+/* line 165, style.less */
 .mark-h4 {
   font-weight: 700;
   margin-top: 20px;
   font-size: 30px;
 }
+/* line 170, style.less */
 .mark-p {
   font-weight: 500;
 }
+/* line 173, style.less */
 .mark-li {
   display: inline-block;
   text-decoration: none;
@@ -170,40 +203,59 @@ h1 {
   font-style: italic;
   font-size: 16px;
 }
+/* line 183, style.less */
 .mark-img {
   width: 160px;
   padding-top: 30px;
   margin-top: 50px;
   height: 200px;
+  background-image: url(../img/mark/dog-2332240_640.jpg);
+  background-size: cover;
 }
+/* line 192, style.less */
 .mark-a {
   text-decoration: none;
   color: #696969;
 }
+/* line 195, style.less */
 .mark-a:hover {
   color: #696969;
   text-decoration: none;
 }
+/* line 200, style.less */
 .mark-ul {
   margin: 0;
   padding: 0;
 }
+/* line 205, style.less */
+.mark-img1 {
+  background-image: url(../img/mark/dog-2332240_640.jpg);
+  background-position: center center;
+  background-size: cover;
+  height: 425px;
+  margin-top: 25px;
+}
+/* line 213, style.less */
 .img-responsive {
   height: 400px;
   margin-top: 25px;
 }
+/* line 217, style.less */
 #design_tips {
   background-color: #2c2c2c;
 }
+/* line 221, style.less */
 .design-h1 {
   padding: 25px 0;
   font-size: 42px;
   color: white;
 }
+/* line 226, style.less */
 .design-p {
   color: white;
   text-align: center;
 }
+/* line 230, style.less */
 .design-input {
   margin-top: 30px;
   width: 520px;
@@ -213,6 +265,7 @@ h1 {
   margin-left: 30%;
   padding: 10px;
 }
+/* line 239, style.less */
 .design-button {
   width: 210px;
   height: 55px;
@@ -223,12 +276,82 @@ h1 {
   background-color: #ff2d2d;
   margin-bottom: 50px;
 }
+/* line 249, style.less */
 .design-a {
   text-decoration: none;
 }
+/* line 251, style.less */
 .design-a:hover {
   text-decoration: none;
 }
+/* line 254, style.less */
 .design-a:active {
   text-decoration: none;
+}
+/* line 262, style.less */
+.get-h1 {
+  font-size: 42px;
+  margin-top: 45px;
+}
+/* line 266, style.less */
+.get-p1 {
+  font-size: 16px;
+  font-weight: 500;
+  padding: 25px 0px;
+}
+/* line 271, style.less */
+.get-border {
+  border: 2px solid #ff2d2d;
+  width: 250px;
+  margin-bottom: 45px;
+}
+/* line 276, style.less */
+.get-textarea {
+  width: 100%;
+  height: 100%;
+  background-color: #e5e5e5;
+  border: none;
+  padding: 15px;
+}
+/* line 283, style.less */
+.get-input {
+  width: 270px;
+  background-color: #e5e5e5;
+  border-radius: 5px;
+  text-decoration: none;
+  border: none;
+  height: 55px;
+  padding: 15px;
+  margin-bottom: 15px;
+}
+/* line 293, style.less */
+.get-button {
+  width: 100%;
+  border: none;
+  background-color: #ff2d2d;
+  margin-top: 5px;
+  border-radius: 5px;
+  text-decoration: none;
+  height: 55px;
+}
+/* line 302, style.less */
+.get-black {
+  background-color: black;
+  height: 100%;
+  vertical-align: middle;
+  -webkit-box-align: middle;
+      -ms-flex-align: middle;
+          align-items: middle;
+  height: 365px;
+}
+/* line 309, style.less */
+.get-h4 {
+  color: white;
+  font-size: 18pt;
+  margin-bottom: 30px;
+}
+/* line 315, style.less */
+.get-black p {
+  padding-top: 25px;
+  color: white;
 }
