--- a/less/style.less
+++ b/less/style.less
@@ -185,6 +185,9 @@ h1 {
 		padding-top: 30px;
 		margin-top: 50px;
 		height: 200px;
+		background-image: url(../img/mark/dog-2332240_640.jpg);
+		-webkit-background-size: cover;
+		background-size: cover;
 	}
 	&-a{
 		text-decoration: none;
@@ -198,6 +201,14 @@ h1 {
 		margin: 0;
 		padding: 0;
 	}
+}
+.mark-img1{
+			background-image: url(../img/mark/dog-2332240_640.jpg);
+			background-position: center center;
+			-webkit-background-size: cover;
+			background-size: cover;
+			height: 425px;
+			margin-top: 25px;
 }
 .img-responsive{
 	height: 400px;
@@ -245,4 +256,63 @@ h1 {
 			
 		}
 	}
+}
+
+.get{
+	&-h1{
+		font-size: 42px;
+		margin-top: 45px;
+	}
+	&-p1{
+		font-size: 16px;
+		font-weight: 500;
+		padding: 25px 0px;
+	}
+	&-border{
+		border: 2px solid @red;
+		width: 250px;
+		margin-bottom: 45px;
+	}
+	&-textarea{
+		width: 100%;
+		height: 100%;
+		background-color: #e5e5e5;
+		border: none;	
+		padding: 15px;
+	}
+	&-input{
+		width: 270px;
+		background-color: #e5e5e5;
+		border-radius: 5px;
+		text-decoration: none;
+		border: none;	
+		height: 55px;
+		padding: 15px;
+		margin-bottom: 15px;
+	}
+	&-button{
+		width: 100%;
+		border: none;
+		background-color: @red;
+		margin-top: 5px;
+		border-radius: 5px;
+		text-decoration: none;
+		height: 55px;
+	}
+	&-black{
+		background-color: black;
+		height: 100%;
+		vertical-align: middle;
+		align-items: middle;
+		height: 365px;
+	}
+	&-h4{
+		color: white;
+		font-size: 18pt;
+		margin-bottom: 30px;
+	}
+}
+.get-black p {
+	padding-top: 25px;
+	color: white;
 }
