--- a/css/style.css
+++ b/css/style.css
@@ -288,24 +288,28 @@ h1 {
 .design-a:active {
   text-decoration: none;
 }
-/* line 262, style.less */
+/* line 261, style.less */
+.get {
+  margin-bottom: 100px;
+}
+/* line 263, style.less */
 .get-h1 {
   font-size: 42px;
   margin-top: 45px;
 }
-/* line 266, style.less */
+/* line 267, style.less */
 .get-p1 {
   font-size: 16px;
   font-weight: 500;
   padding: 25px 0px;
 }
-/* line 271, style.less */
+/* line 272, style.less */
 .get-border {
   border: 2px solid #ff2d2d;
   width: 250px;
   margin-bottom: 45px;
 }
-/* line 276, style.less */
+/* line 277, style.less */
 .get-textarea {
   width: 100%;
   height: 100%;
@@ -313,7 +317,7 @@ h1 {
   border: none;
   padding: 15px;
 }
-/* line 283, style.less */
+/* line 284, style.less */
 .get-input {
   width: 270px;
   background-color: #e5e5e5;
@@ -324,7 +328,7 @@ h1 {
   padding: 15px;
   margin-bottom: 15px;
 }
-/* line 293, style.less */
+/* line 294, style.less */
 .get-button {
   width: 100%;
   border: none;
@@ -334,7 +338,7 @@ h1 {
   text-decoration: none;
   height: 55px;
 }
-/* line 302, style.less */
+/* line 303, style.less */
 .get-black {
   background-color: black;
   height: 100%;
@@ -344,14 +348,40 @@ h1 {
           align-items: middle;
   height: 365px;
 }
-/* line 309, style.less */
+/* line 310, style.less */
 .get-h4 {
   color: white;
   font-size: 18pt;
   margin-bottom: 30px;
 }
-/* line 315, style.less */
+/* line 316, style.less */
 .get-black p {
   padding-top: 25px;
   color: white;
+}
+/* line 320, style.less */
+footer {
+  background-color: #313030;
+}
+/* line 325, style.less */
+.footer-p {
+  padding: 40px 0;
+  color: white;
+}
+/* line 329, style.less */
+.footer-li {
+  display: inline-block;
+}
+/* line 332, style.less */
+.footer-img {
+  padding: 40px 0;
+}
+/* line 335, style.less */
+.footer-a {
+  text-decoration: none;
+}
+/* line 337, style.less */
+.footer-a:hover {
+  background-color: #ff2d2d;
+  border-radius: 50%;
 }
