--- a/css/style.css
+++ b/css/style.css
@@ -10,13 +10,17 @@ header {
 .header-a {
   text-decoration: none;
   color: white;
+  width: 100%;
+  height: 100%;
 }
-/* line 12, style.less */
+/* line 14, style.less */
 .header-a:hover {
   text-decoration: none;
   color: white;
+  width: 100%;
+  height: 100%;
 }
-/* line 17, style.less */
+/* line 21, style.less */
 .header-ul {
   background-color: #313030;
   width: 100%;
@@ -24,15 +28,18 @@ header {
   color: white;
   margin: 30px 0px;
 }
-/* line 24, style.less */
+/* line 28, style.less */
 .header-li {
   text-transform: uppercase;
   letter-spacing: 1.5px;
   margin: 7px;
   margin-top: 0px;
   margin-bottom: 0px;
+  width: 90px;
+  height: 90px;
+  line-height: 90px;
 }
-/* line 31, style.less */
+/* line 38, style.less */
 .header-button {
   color: white;
   background-color: #ff2d2d;
@@ -44,19 +51,21 @@ header {
   margin-top: 35px;
   border: none;
 }
-/* line 42, style.less */
+/* line 49, style.less */
 .header-video {
   background-image: url(../img/header/video.png);
   background-size: cover;
   margin-bottom: 50px;
+  text-align: center;
+  margin-left: auto;
 }
-/* line 49, style.less */
+/* line 58, style.less */
 h1 {
   font-weight: 900;
   font-size: 55px;
   letter-spacing: 1.5px;
 }
-/* line 55, style.less */
+/* line 64, style.less */
 .header-li {
   display: inline-block;
   text-decoration: none;
@@ -65,31 +74,31 @@ h1 {
   line-height: 90px;
   font-weight: 700;
 }
-/* line 62, style.less */
+/* line 71, style.less */
 .header-li:hover {
   background-color: #ff2d2d;
 }
-/* line 66, style.less */
+/* line 75, style.less */
 .our-p {
   padding: 15px 0;
 }
-/* line 69, style.less */
+/* line 78, style.less */
 .DYK {
   padding-top: 50px;
 }
-/* line 71, style.less */
+/* line 80, style.less */
 .DYK-h1 {
   font-size: 40px;
   text-transform: uppercase;
   letter-spacing: 1.5px;
 }
-/* line 76, style.less */
+/* line 85, style.less */
 .DYK-p {
   font-size: 16px;
   margin-top: 35px;
   margin-bottom: 35px;
 }
-/* line 81, style.less */
+/* line 90, style.less */
 .DYK-button {
   width: 200px;
   height: 45px;
@@ -99,62 +108,62 @@ h1 {
   padding: 12px 10px;
   border-radius: 10px;
 }
-/* line 90, style.less */
+/* line 99, style.less */
 .DYK-img {
   padding-top: 20px;
   padding-bottom: 20px;
 }
-/* line 94, style.less */
+/* line 103, style.less */
 .DYK-block {
   height: 270px;
 }
-/* line 97, style.less */
+/* line 106, style.less */
 .DYK-h4 {
   font-weight: 900;
   padding-bottom: 20px;
 }
-/* line 101, style.less */
+/* line 110, style.less */
 .DYK-animation {
   margin-bottom: 170px;
 }
-/* line 106, style.less */
+/* line 115, style.less */
 .feature-h1 {
   font-size: 42px;
   margin: 25px auto;
 }
-/* line 110, style.less */
+/* line 119, style.less */
 .feature-p {
   font-size: 16px;
   padding-bottom: 20px;
 }
-/* line 114, style.less */
+/* line 123, style.less */
 .feature-border {
   border-bottom: 2px solid #ff2d2d;
   display: block;
   margin: auto;
   width: 300px;
 }
-/* line 120, style.less */
+/* line 129, style.less */
 .feature-ul {
   margin: 30px auto;
 }
-/* line 123, style.less */
+/* line 132, style.less */
 .feature-li {
   display: inline-block;
   font-size: 22px;
   padding: 0 10px;
 }
-/* line 128, style.less */
+/* line 137, style.less */
 .feature-a {
   text-decoration: none;
   color: #797979;
 }
-/* line 131, style.less */
+/* line 140, style.less */
 .feature-a:hover {
   color: #ff2d2d;
   text-decoration: none;
 }
-/* line 136, style.less */
+/* line 145, style.less */
 .feature-img {
   display: inline-block;
   height: 290px;
@@ -162,13 +171,13 @@ h1 {
   padding-right: 7px;
   padding-top: 15px;
 }
-/* line 146, style.less */
+/* line 155, style.less */
 .meet-h1 {
   font-size: 42px;
   margin-bottom: 20px;
   font-weight: 900;
 }
-/* line 151, style.less */
+/* line 160, style.less */
 .meet-p1 {
   font-weight: 500;
   font-size: 16px;
@@ -176,23 +185,23 @@ h1 {
   width: 350px;
   padding-bottom: 25px;
 }
-/* line 160, style.less */
+/* line 169, style.less */
 .mark-main {
   height: 460px;
   width: 320px;
   margin-top: 25px;
 }
-/* line 165, style.less */
+/* line 174, style.less */
 .mark-h4 {
   font-weight: 700;
   margin-top: 20px;
   font-size: 30px;
 }
-/* line 170, style.less */
+/* line 179, style.less */
 .mark-p {
   font-weight: 500;
 }
-/* line 173, style.less */
+/* line 182, style.less */
 .mark-li {
   display: inline-block;
   text-decoration: none;
@@ -203,7 +212,7 @@ h1 {
   font-style: italic;
   font-size: 16px;
 }
-/* line 183, style.less */
+/* line 192, style.less */
 .mark-img {
   width: 160px;
   padding-top: 30px;
@@ -212,22 +221,22 @@ h1 {
   background-image: url(../img/mark/dog-2332240_640.jpg);
   background-size: cover;
 }
-/* line 192, style.less */
+/* line 201, style.less */
 .mark-a {
   text-decoration: none;
   color: #696969;
 }
-/* line 195, style.less */
+/* line 204, style.less */
 .mark-a:hover {
   color: #696969;
   text-decoration: none;
 }
-/* line 200, style.less */
+/* line 209, style.less */
 .mark-ul {
   margin: 0;
   padding: 0;
 }
-/* line 205, style.less */
+/* line 214, style.less */
 .mark-img1 {
   background-image: url(../img/mark/dog-2332240_640.jpg);
   background-position: center center;
@@ -235,27 +244,27 @@ h1 {
   height: 425px;
   margin-top: 25px;
 }
-/* line 213, style.less */
+/* line 222, style.less */
 .img-responsive {
   height: 400px;
   margin-top: 25px;
 }
-/* line 217, style.less */
+/* line 226, style.less */
 #design_tips {
   background-color: #2c2c2c;
 }
-/* line 221, style.less */
+/* line 230, style.less */
 .design-h1 {
   padding: 25px 0;
   font-size: 42px;
   color: white;
 }
-/* line 226, style.less */
+/* line 235, style.less */
 .design-p {
   color: white;
   text-align: center;
 }
-/* line 230, style.less */
+/* line 239, style.less */
 .design-input {
   margin-top: 30px;
   width: 520px;
@@ -265,7 +274,7 @@ h1 {
   margin-left: 30%;
   padding: 10px;
 }
-/* line 239, style.less */
+/* line 248, style.less */
 .design-button {
   width: 210px;
   height: 55px;
@@ -276,40 +285,40 @@ h1 {
   background-color: #ff2d2d;
   margin-bottom: 50px;
 }
-/* line 249, style.less */
+/* line 258, style.less */
 .design-a {
   text-decoration: none;
 }
-/* line 251, style.less */
+/* line 260, style.less */
 .design-a:hover {
   text-decoration: none;
 }
-/* line 254, style.less */
+/* line 263, style.less */
 .design-a:active {
   text-decoration: none;
 }
-/* line 261, style.less */
+/* line 270, style.less */
 .get {
   margin-bottom: 100px;
 }
-/* line 263, style.less */
+/* line 272, style.less */
 .get-h1 {
   font-size: 42px;
   margin-top: 45px;
 }
-/* line 267, style.less */
+/* line 276, style.less */
 .get-p1 {
   font-size: 16px;
   font-weight: 500;
   padding: 25px 0px;
 }
-/* line 272, style.less */
+/* line 281, style.less */
 .get-border {
   border: 2px solid #ff2d2d;
   width: 250px;
   margin-bottom: 45px;
 }
-/* line 277, style.less */
+/* line 286, style.less */
 .get-textarea {
   width: 100%;
   height: 100%;
@@ -317,7 +326,7 @@ h1 {
   border: none;
   padding: 15px;
 }
-/* line 284, style.less */
+/* line 293, style.less */
 .get-input {
   width: 270px;
   background-color: #e5e5e5;
@@ -328,7 +337,7 @@ h1 {
   padding: 15px;
   margin-bottom: 15px;
 }
-/* line 294, style.less */
+/* line 303, style.less */
 .get-button {
   width: 100%;
   border: none;
@@ -338,49 +347,48 @@ h1 {
   text-decoration: none;
   height: 55px;
 }
-/* line 303, style.less */
+/* line 312, style.less */
 .get-black {
   background-color: black;
   height: 100%;
-  vertical-align: middle;
-  -webkit-box-align: middle;
-      -ms-flex-align: middle;
-          align-items: middle;
   height: 365px;
 }
-/* line 310, style.less */
+/* line 318, style.less */
 .get-h4 {
   color: white;
   font-size: 18pt;
   margin-bottom: 30px;
+  margin-top: 50px;
+  padding-left: 50px;
 }
-/* line 316, style.less */
+/* line 326, style.less */
 .get-black p {
   padding-top: 25px;
   color: white;
+  padding-left: 50px;
 }
-/* line 320, style.less */
+/* line 331, style.less */
 footer {
   background-color: #313030;
 }
-/* line 325, style.less */
+/* line 336, style.less */
 .footer-p {
   padding: 40px 0;
   color: white;
 }
-/* line 329, style.less */
+/* line 340, style.less */
 .footer-li {
   display: inline-block;
 }
-/* line 332, style.less */
+/* line 343, style.less */
 .footer-img {
   padding: 40px 0;
 }
-/* line 335, style.less */
+/* line 346, style.less */
 .footer-a {
   text-decoration: none;
 }
-/* line 337, style.less */
+/* line 348, style.less */
 .footer-a:hover {
   background-color: #ff2d2d;
   border-radius: 50%;
