--- a/less/style.less
+++ b/less/style.less
@@ -9,9 +9,13 @@ header{
 	&-a{
 		text-decoration: none;
 		color: white;
+		width: 100%;
+		height: 100%;
 		&:hover{
 			text-decoration: none;
 			color: white;
+			width: 100%;
+			height: 100%;
 		}
 	}
 	&-ul{
@@ -27,6 +31,9 @@ header{
 		margin: 7px;
 		margin-top: 0px;
 		margin-bottom: 0px;
+		width: 90px;
+		height: 90px;
+		line-height: 90px;
 	}
 	&-button{
 		color: white;
@@ -44,6 +51,8 @@ header{
 		-webkit-background-size: cover;
 		background-size: cover;
 		margin-bottom: 50px;
+		text-align: center;
+		margin-left: auto;
 	}
 }
 h1 {
@@ -303,19 +312,21 @@ h1 {
 	&-black{
 		background-color: black;
 		height: 100%;
-		vertical-align: middle;
-		align-items: middle;
+		
 		height: 365px;
 	}
 	&-h4{
 		color: white;
 		font-size: 18pt;
 		margin-bottom: 30px;
+		margin-top: 50px;
+		padding-left: 50px;
 	}
 }
 .get-black p {
 	padding-top: 25px;
 	color: white;
+	padding-left: 50px;
 }
 footer{
 	background-color: #313030;
