--- a/Выпускная работа/less/style.less
+++ b/Выпускная работа/less/style.less
@@ -310,3 +310,23 @@ h1 {
 	font-size: 17px;
 }
 }
+.tab {
+	&-a{
+		text-decoration: none;
+		padding: 0px;
+		margin: 0px;
+		border: 0px;
+
+		&:hover{
+			color: white;
+			background-color: @orange;
+		}
+	}
+	&-li{	
+		height: 100%;
+		padding: 0;
+		margin: 0;
+		border: 0px;
+
+	}
+}
