--- a/Выпускная работа/less/style.less
+++ b/Выпускная работа/less/style.less
@@ -167,7 +167,7 @@ h1 {
 }
 .btn {
 	padding: 16px;	
-	margin-right: 14px;
+	
 	text-decoration: none;
 	&:hover{
 		color: white;
@@ -193,8 +193,28 @@ h1 {
 	}
 }
 .sistemi {
-	margin: 5px;
+	&-span{
+		padding-left: 35px;
+		vertical-align: middle;
+		height: 22px;
+		margin-bottom: 30px;
+	}
+	
+	&-a{
+		vertical-align: middle;
+		 background-image: url(../img/sistemi/icon.png);
+		 background-repeat: no-repeat;
+		 width: 22px;
+		 color: black;
+		 &:hover{
+		 	color:black;
+		 	text-decoration: none;
+		 	background-image: url(../img/sistemi/iconactive.png);
+		 }
+	}
 }
+
+
 .vigodi>h4{
 	font-weight: 700;
 	margin: 25px 0;	
@@ -311,12 +331,13 @@ h1 {
 }
 }
 .tab {
+	margin-right: 0px;
+	margin: 0 auto;
 	&-a{
 		text-decoration: none;
 		padding: 0px;
 		margin: 0px;
 		border: 0px;
-
 		&:hover{
 			color: white;
 			background-color: @orange;
@@ -327,6 +348,23 @@ h1 {
 		padding: 0;
 		margin: 0;
 		border: 0px;
-
 	}
+}
+.nav li a {
+    padding: 0px;
+}
+.btn-default {
+	margin-right: 0;
+}
+.nav-tabs {
+    border-bottom: 0px solid #ddd;
+    margin-left: 20%;
+}
+.nav-tabs>li>a {
+     margin-right: 0px; 
+    
+}
+.btn-default:active{
+	background-color: black;
+	color: white;
 }
